# SiliconSeal

./: .gitignore  README.md  render.yaml
backend/: .env.example  Dockerfile  README.md  improved_paddle.py  inspect_paddle.py  pyproject.toml  requirements.txt  test_yolo.py
backend/src/app/: main.py
backend/src/app/routers/: __init__.py  ai.py  api.py  auth.py  kb_admin.py
backend/src/core/: __init__.py  auth.py  config.py  database.py  models.py  schemas.py
backend/src/engine/: kb_index.py  kb_loader.py
backend/src/kb/: kb.json
backend/src/pipeline/: pipeline.py
backend/src/pipeline/detector/: __init__.py  config.py  yolo_detector.py
backend/src/pipeline/intelligence/: ai_agent.py  mouser_service.py  patterns.py
backend/src/pipeline/ocr/: __init__.py  ocr.py  patterns.py  patters.py
backend/src/pipeline/verify/: __init__.py  aho_verify.py  regex_verify.py  scoring.py  verify.py
backend/src/utils/: image_utils.py
documentation/: Algorithm Documentation.docx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: BackendBanner.jsx  DarkModeToggle.jsx  Navbar.jsx  PipelineBanner.jsx  VerdictCard.jsx
frontend/src/context/: AuthContext.jsx  LanguageContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useBackendStatus.js
frontend/src/pages/: Admin.jsx  AdminDashboard.jsx  AdminLogin.jsx  Architecture.jsx  BatchScan.jsx  DamagedIC.jsx  Home.jsx  LiveScan.jsx  Login.jsx  NotFound.jsx  Scan.jsx
frontend/src/utils/: api.js  demoImages.js
