[project]
name = "backend"
version = "0.1.0"
description = "SIH 25162 - AOI IC Verification System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.121.3",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "numpy>=1.26.4",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=12.0.0",
    "pyahocorasick>=2.2.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "ultralytics>=8.3.230",
    "uvicorn[standard]>=0.38.0",
]
